# ds-aws-document-chatbot

./: .gitignore  README.md  knowledge_base_setup.md  pyproject.toml
client_packages/: bedrock_client.py  password_generator.py  utils.py
config/: config.yaml
streamlit_app/: chatbot.py  main.py
